# ufo

./: .gitignore  CMakeLists.txt  README.md  flake.nix  fold.cpp  main.cpp  plot.cpp  test.cpp  xmake.lua
include/ufo/: fold.hpp  plot.hpp  solver.hpp  solver.impl.hpp  solver.tpp  ufo.hpp  ufo.impl.hpp  unfold.hpp  unfold.impl.hpp
src/: fold.cpp  main.cpp  plot.cpp  solver.cpp  ufo.cpp  unfold.cpp
test/: 14.2.2.4.unfold.yaml  14.2.2.5.plot.yaml  14.2.2.5.unfold.yaml  14.2.2.unfold.yaml  14.2.2.yaml  14.2.4.4.plot.yaml  14.2.4.4.unfold.yaml  14.2.5.5.plot.yaml  14.2.5.5.unfold.yaml  14.2.6.4.plot.yaml  14.2.6.4.unfold.yaml
